--- a/ADETQ2_Brand_X/Views/Home/Index.cshtml
+++ b/ADETQ2_Brand_X/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <p><h1>APPLICATION DEV & EMERGING TECH</h1></p>
-    <p>By: Brand X</p>
+    <p>By: TEAM IP</p>
 </div>
